k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: node-react-postgres-frontend:latest   # build & load into minikube
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
