k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8010
  type: ClusterIP
